# h3xonize

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
h3xonize/: download.py  process.py
tests/: test_hello.py
